--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ExternoActivity"></activity>
+        <activity android:name=".ExternoActivity" />
+        <activity android:name=".AlunoActivity" />
+        <activity android:name=".ServidorActivity"></activity>
     </application>
 
 </manifest>
